[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/superstar_memesbruh03_16px.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/RoomScene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 21
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="RoomScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 62, 158 )
script = ExtResource( 2 )

[node name="playButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 233.0
margin_top = -75.0
margin_right = 369.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 2 )
text = "play"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.0
margin_top = 44.0
margin_right = 52.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "Room ID"

[node name="ItemList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -125.0
margin_right = 187.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 3 )
items = [ "Elemento 0", null, false, "Elemento 1", null, false, "Elemento 2", null, false ]

[node name="exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -75.0
margin_right = 68.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 2 )
text = "exit"

[node name="TimerUpdatePlayers" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="TimerUpdatePlayers" to="." method="_on_TimerUpdatePlayers_timeout"]
